# cemu

./: .gitignore  CMakeLists.txt
include/: bus.h  cpu.h  dram.cpp  dram.h  inst.h  single.h  type.h
src/: bus.cpp  cpu.cpp  dram.cpp  main.cpp
tests/: CMakeLists.txt  Makefile  add-addi.s  clearbin.sh  getbin.sh  instruction_test.cpp  load.s  r-type.s
